--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "babelify": "^7.2.0",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
-    "gulp-browserify": "^0.5.1"
+    "gulp-browserify": "^0.5.1",
+    "gulp-uglify": "^1.5.1"
   },
   "browserify": {
     "transform": [
@@ -24,6 +25,8 @@
     "express": "^4.13.3",
     "jade": "^1.11.0",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "history": "^1.16.0",
+    "react-router": "^1.0.2"
   }
 }
